--- a/css/style.css
+++ b/css/style.css
@@ -961,6 +961,85 @@ h6 {
   font-weight: 400;
 }
 
+* {
+  scrollbar-width: 8px;
+  scrollbar-color: #020202 #d6d6d6;
+}
+
+*::-webkit-scrollbar {
+  width: 8px;
+  background-color: #fff;
+}
+
+*::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+  border-radius: 0;
+  background: #eee;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 0;
+  border: 0px none #fff;
+  background-color: #1c1c1c;
+  -webkit-transition: all 280ms ease-in-out;
+  transition: all 280ms ease-in-out;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #020202;
+}
+
+body.lock {
+  overflow: hidden;
+  -ms-touch-action: none;
+      touch-action: none;
+}
+
+@-webkit-keyframes rotation {
+  from {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+
+  to {
+    -webkit-transform: rotate(359deg);
+            transform: rotate(359deg);
+  }
+}
+
+@keyframes rotation {
+  from {
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+
+  to {
+    -webkit-transform: rotate(359deg);
+            transform: rotate(359deg);
+  }
+}
+
+@-webkit-keyframes blink {
+  from {
+    opacity: 0.5;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes blink {
+  from {
+    opacity: 0.5;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 @-webkit-keyframes showHeader {
   0% {
     top: -100%;
@@ -979,35 +1058,6 @@ h6 {
   100% {
     top: 0;
   }
-}
-
-* {
-  scrollbar-width: 8px;
-  scrollbar-color: #020202 #d6d6d6;
-}
-
-*::-webkit-scrollbar {
-  width: 8px;
-  background-color: #fff;
-}
-
-*::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
-          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  background: #eee;
-}
-
-*::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  border: 0px none #fff;
-  background-color: #1c1c1c;
-  -webkit-transition: all 280ms ease-in-out;
-  transition: all 280ms ease-in-out;
-}
-
-*::-webkit-scrollbar-thumb:hover {
-  background-color: #020202;
 }
 
 .wrapper {
@@ -1048,6 +1098,11 @@ h6 {
   padding: 0 15px;
 }
 
+[class*=-ibg] {
+  position: relative;
+  overflow: hidden;
+}
+
 [class*=-ibg] img {
   position: absolute;
   top: 0;
@@ -1067,6 +1122,71 @@ h6 {
 
 .title span {
   color: #90c809;
+}
+
+.form-field {
+  position: relative;
+}
+
+.input-form {
+  width: 100%;
+  height: 2.8125rem;
+  padding-left: 0.9375rem;
+  background: transparent;
+  border-radius: 10px;
+  border: 0.0625rem solid rgba(0, 0, 0, 0.2);
+  -webkit-transition: all 280ms ease-in-out 0ms;
+  -o-transition: all 280ms ease-in-out 0ms;
+  transition: all 280ms ease-in-out 0ms;
+}
+
+.input-form:focus {
+  border-color: #90c809;
+}
+
+.input-form:focus + .input-placeholder {
+  -webkit-transform: translateY(-1.375rem);
+      -ms-transform: translateY(-1.375rem);
+          transform: translateY(-1.375rem);
+  background: #fff;
+  color: #90c809;
+}
+
+.input-placeholder {
+  position: absolute;
+  pointer-events: none;
+  color: #525252;
+  top: 0.875rem;
+  padding: 0 0.25rem;
+  left: 0.9375rem;
+  -webkit-transition: all 280ms ease-in-out 0ms;
+  -o-transition: all 280ms ease-in-out 0ms;
+  transition: all 280ms ease-in-out 0ms;
+}
+
+.input-text-req {
+  color: #e90000;
+  font-size: 0.875rem;
+  display: inline-block;
+  margin-left: 0.9375rem;
+  margin-top: 0.5rem;
+  display: none;
+}
+
+.button-form {
+  padding: 1.4375rem 0;
+  width: 100%;
+  background-color: #90c809;
+  font-size: 1.125rem;
+  color: #fff;
+  border-radius: 10px;
+  -webkit-transition: all 280ms ease-in-out 0ms;
+  -o-transition: all 280ms ease-in-out 0ms;
+  transition: all 280ms ease-in-out 0ms;
+}
+
+.button-form:hover {
+  background: #7eb008;
 }
 
 .swiper .swiper-pagination .swiper-pagination-bullet {
@@ -1211,6 +1331,72 @@ h6 {
 .select-list__item:hover {
   background-color: rgba(0, 0, 0, 0.1);
   color: #90c809;
+}
+
+.map-loader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  color: #000;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 2;
+  pointer-events: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: rgba(0, 0, 0, 0.55);
+  -webkit-transition: opacity 0.7s ease;
+  -o-transition: opacity 0.7s ease;
+  transition: opacity 0.7s ease;
+}
+
+.map-loader.is-active {
+  visibility: visible;
+  opacity: 1;
+}
+
+.map-loader::after {
+  content: "";
+  position: absolute;
+  top: calc(50% - 1.5rem);
+  left: calc(50% - 1.5rem);
+  width: 3rem;
+  height: 3rem;
+  -webkit-animation: rotation 1s linear infinite;
+          animation: rotation 1s linear infinite;
+  border: solid 0.5rem #fff;
+  border-left-color: transparent;
+  border-radius: 50%;
+}
+
+.no-webp .map-container{
+  background-image: url("../images/map-preload.png"); }
+
+.map-container {
+  position: relative;
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  border: 0.0625rem solid rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 0 0.625rem rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0 0.625rem rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.map-container #map-yandex {
+  position: relative;
+  z-index: 7;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  background-color: transparent;
 }
 
 .header {
@@ -1531,66 +1717,11 @@ h6 {
 }
 
 .features__field {
-  position: relative;
-  margin-bottom: 8px;
-}
-
-.features__input {
-  width: 100%;
-  height: 45px;
-  padding-left: 15px;
-  background: transparent;
-  border: none;
-  border-radius: 10px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  -webkit-transition: all 280ms ease-in-out 0ms;
-  -o-transition: all 280ms ease-in-out 0ms;
-  transition: all 280ms ease-in-out 0ms;
-}
-
-.features__input:focus {
-  border-color: #90c809;
-}
-
-.features__input:focus + .features__placeholder {
-  -webkit-transform: translateY(-22px);
-      -ms-transform: translateY(-22px);
-          transform: translateY(-22px);
-  background: #fff;
-  color: #90c809;
-}
-
-.features__placeholder {
-  position: absolute;
-  pointer-events: none;
-  color: #525252;
-  top: 14px;
-  padding: 0 4px;
-  left: 15px;
-  -webkit-transition: all 280ms ease-in-out 0ms;
-  -o-transition: all 280ms ease-in-out 0ms;
-  transition: all 280ms ease-in-out 0ms;
+  margin-bottom: 0.5rem;
 }
 
 .features__button {
-  padding: 23px 0;
-  width: 100%;
   margin-top: 4px;
-  background-color: #90c809;
-  font-size: 18px;
-  color: #fff;
-  text-align: center;
-  border: none;
-  border-radius: 10px;
-  display: inline-block;
-  cursor: pointer;
-  -webkit-transition: all 280ms ease-in-out 0ms;
-  -o-transition: all 280ms ease-in-out 0ms;
-  transition: all 280ms ease-in-out 0ms;
-}
-
-.features__button:hover {
-  background: #7eb008;
 }
 
 .promotions__container {
@@ -1607,12 +1738,7 @@ h6 {
   margin-bottom: 2.5rem;
 }
 
-.promotions__slider {
-  width: 100%;
-}
-
 .promotions__wrapper {
-  width: 100%;
   padding-bottom: 3.125rem;
 }
 
@@ -1642,6 +1768,7 @@ h6 {
           flex-direction: column;
   position: relative;
   width: 48.75rem;
+  margin: 0 auto;
   overflow: hidden;
   border-radius: 1rem;
   -webkit-box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
@@ -2236,6 +2363,280 @@ h6 {
   background-color: #6d9707;
 }
 
+.no-webp .reviews{
+  background-image: url("../images/reviews/bg.jpg"); }
+
+.reviews {
+  padding-top: 3.75rem;
+  padding-bottom: 3.75rem;
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.reviews__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 0.9375rem;
+     -moz-column-gap: 0.9375rem;
+          column-gap: 0.9375rem;
+  max-width: 50.625rem;
+  margin: 0 auto;
+  position: relative;
+  text-align: left;
+  margin-bottom: 2.5rem;
+}
+
+.reviews__title::before {
+  content: "27%";
+  color: #90c809;
+  font-size: 5.375rem;
+}
+
+.slider-reviews {
+  max-width: 33.75rem;
+  overflow: visible;
+}
+
+.slider-reviews__wrapper {
+  padding-bottom: 1.5rem;
+}
+
+.slider-reviews__container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: auto 0.25rem auto 0.25rem auto;
+  -ms-grid-columns: 7.5rem 1.25rem 1fr;
+      grid-template: repeat(3, auto)/7.5rem 1fr;
+  -webkit-column-gap: 1.25rem;
+     -moz-column-gap: 1.25rem;
+          column-gap: 1.25rem;
+  row-gap: 0.25rem;
+}
+
+.slider-reviews__image-ibg {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 3;
+  grid-row: 1/4;
+  overflow: hidden;
+  border-radius: 50%;
+  width: 100%;
+  max-height: 7.5rem;
+}
+
+.slider-reviews__text {
+  color: #525252;
+  display: -webkit-box;
+  -webkit-line-clamp: 6;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.slider-reviews__user-name {
+  font-weight: 700;
+  -ms-grid-column: 2;
+  grid-column: 2;
+}
+
+.slider-reviews__address {
+  font-size: 0.875rem;
+  color: #525252;
+  -ms-grid-column: 2;
+  grid-column: 2;
+}
+
+.slider-reviews__progress-bar.swiper-pagination {
+  top: auto;
+  bottom: 0;
+  background-color: transparent;
+  height: 0.1875rem;
+}
+
+.slider-reviews__progress-bar.swiper-pagination .swiper-pagination-progressbar-fill {
+  background-color: #90c809;
+}
+
+.slider-reviews__progress-bar::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0.0625rem;
+  background-color: #90c809;
+}
+
+.feedback {
+  position: relative;
+  padding-top: 3.75rem;
+  padding-bottom: 6.25rem;
+  background-color: #f8f8f8;
+  overflow: hidden;
+}
+
+.feedback__title {
+  margin-bottom: 1.25rem;
+}
+
+.feedback__desc {
+  margin-bottom: 2.8125rem;
+  font-size: 1.125rem;
+  color: #535353;
+  text-align: center;
+}
+
+.feedback__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 1.25rem;
+     -moz-column-gap: 1.25rem;
+          column-gap: 1.25rem;
+}
+
+.feedback__form-column {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 25rem;
+          flex: 0 0 25rem;
+}
+
+.feedback__address {
+  padding: 0.75rem 0.9375rem;
+  background-color: #90c809;
+  border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 1.25rem;
+  margin-bottom: 2.5rem;
+}
+
+.feedback__address-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 0.75rem;
+     -moz-column-gap: 0.75rem;
+          column-gap: 0.75rem;
+}
+
+.feedback__address-icon {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 1.875rem;
+          flex: 0 0 1.875rem;
+  height: 1.875rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.feedback__address-text {
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.feedback__address-text_link:hover {
+  text-decoration: underline;
+}
+
+.feedback__form {
+  padding: 1.3125rem 0.9375rem;
+  position: relative;
+  z-index: 10;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 0.625rem;
+  background-color: #fff;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 0.5rem 1.5rem 0 rgba(0, 0, 0, 0.2), 0 0.625rem 1.875rem 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0.5rem 1.5rem 0 rgba(0, 0, 0, 0.2), 0 0.625rem 1.875rem 0 rgba(0, 0, 0, 0.1);
+}
+
+.no-webp .feedback__form::before{
+  background-image: url("../images/feedback/leaf.png"); }
+
+.feedback__form::before {
+  content: "";
+  position: absolute;
+  top: -4.5rem;
+  left: -3.9375rem;
+  width: 294px;
+  height: 194px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.feedback__form-title {
+  max-width: 88%;
+  margin: 0 auto;
+  position: relative;
+  font-size: 1.125rem;
+  font-weight: 700;
+  color: #414141;
+  text-align: center;
+  line-height: 1.2;
+  margin-bottom: -0.3125rem;
+  text-shadow: 0 0 0.75rem #fff;
+}
+
+.feedback__form-subtitle {
+  font-weight: 700;
+  color: #90c809;
+  text-align: center;
+  margin-bottom: 0.625rem;
+}
+
+.feedback__map-column {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.feedback__decor-image {
+  position: absolute;
+  bottom: -0.625rem;
+  left: 30%;
+  z-index: 9;
+  pointer-events: none;
+}
+
+.feedback__back-image {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  z-index: 9;
+  pointer-events: none;
+}
+
 .footer {
   padding: 20px 0;
   background: #020202;
@@ -2481,6 +2882,12 @@ h6 {
   }
 }
 
+@media (max-width: 780.98px) {
+  .reviews__title {
+    font-size: 1.875rem;
+  }
+}
+
 @media (max-width: 768.98px) {
   .header__burger {
     display: -webkit-box;
@@ -2527,6 +2934,24 @@ h6 {
 
   .catalog__vegetables-ibg {
     top: -9.375rem;
+  }
+
+  .feedback__form-column {
+    -ms-flex-preferred-size: 18.75rem;
+        flex-basis: 18.75rem;
+  }
+
+  .feedback__form-title {
+    max-width: none;
+    font-size: 1rem;
+  }
+
+  .feedback__form-subtitle {
+    font-size: 0.875rem;
+  }
+
+  .feedback__back-image {
+    height: 6.25rem;
   }
 
   .burger-menu._active {
@@ -2631,6 +3056,24 @@ h6 {
   }
 }
 
+@media (max-width: 550.98px) {
+  .feedback__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    row-gap: 2.25rem;
+  }
+
+  .feedback__map-column {
+    height: 28.125rem;
+  }
+
+  .feedback__decor-image {
+    height: 11.25rem;
+  }
+}
+
 @media (max-width: 540.98px) {
   .footer__container {
     -webkit-box-orient: vertical;
@@ -2644,6 +3087,61 @@ h6 {
   }
 }
 
+@media (max-width: 510.98px) {
+  .reviews__title {
+    font-size: 1.3125rem;
+  }
+}
+
+@media (max-width: 500.98px) {
+  .individual-selection {
+    padding-bottom: 0;
+  }
+
+  .individual-selection__decore-image {
+    right: -3.75rem;
+  }
+
+  .form-selection {
+    -ms-grid-rows: auto 1.25rem auto 1.25rem auto 1.25rem auto 1.25rem auto 1.25rem auto 1.25rem auto 1.25rem auto 1.25rem auto 1.25rem auto 1.25rem auto;
+    -ms-grid-columns: 1fr;
+        grid-template: repeat(11, auto)/1fr;
+    row-gap: 1.25rem;
+    margin: 0 -0.9375rem;
+    border-radius: 0;
+    padding-bottom: 7.5rem;
+    padding: 2.25rem 0.9375rem 7.5rem;
+  }
+
+  .form-selection__form-field_column {
+    row-gap: 0.75rem;
+  }
+
+  .form-selection__form-field_name {
+    -ms-grid-row: 9;
+    -ms-grid-row-span: 1;
+    grid-row: 9/10;
+  }
+
+  .form-selection__form-field_phone {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 10;
+    -ms-grid-row-span: 1;
+    grid-row: 10/11;
+  }
+
+  .form-selection__form-field_button {
+    -ms-grid-row: 11;
+    grid-row: 11;
+  }
+
+  .form-selection__label {
+    margin-bottom: 0.75rem;
+  }
+}
+
 @media (max-width: 460.98px) {
   .item-promotion__footer {
     -ms-grid-columns: 9.375rem 1fr;
@@ -2653,6 +3151,41 @@ h6 {
   .item-promotion__button {
     padding: 0.5rem;
     height: 100%;
+  }
+
+  .slider-reviews__container {
+    -ms-grid-rows: 6.25rem auto auto auto;
+    -ms-grid-columns: 1fr;
+        grid-template: 6.25rem auto auto auto/1fr;
+  }
+
+  .slider-reviews__image-ibg {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+    max-width: 6.25rem;
+  }
+
+  .slider-reviews__text {
+    -ms-grid-row: 4;
+    grid-row: 4;
+  }
+
+  .slider-reviews__user-name {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+
+  .slider-reviews__address {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+    -ms-grid-column: 1;
+    grid-column: 1;
+    margin-bottom: 0.625rem;
   }
 }
 
@@ -2678,6 +3211,14 @@ h6 {
     top: -5.3125rem;
   }
 
+  .reviews__title {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+
   .policy {
     padding-left: 5px;
     padding-right: 5px;
@@ -2687,6 +3228,10 @@ h6 {
 @media (max-width: 375.98px) {
   .catalog__vegetables-ibg {
     top: -4.6875rem;
+  }
+
+  .feedback__map-column {
+    height: 18.75rem;
   }
 }
 
@@ -2876,6 +3421,8 @@ h6 {
 }
 }
 
+.webp .map-container{ background-image: url(../images/map-preload.webp); }
+
 .webp .promo{ background-image: url(./../images/promo/bg.webp); }
 
 .webp .catalog{ background-image: url(./../images/catalog/bg-catalog.webp); }
@@ -2883,3 +3430,7 @@ h6 {
 .webp .individual-selection{ background-image: url(../images/selection/bg-grass.webp); }
 
 .webp .individual-selection__form-wrap::before{ background-image: url(../images/selection/herb.webp); }
+
+.webp .reviews{ background-image: url(../images/reviews/bg.webp); }
+
+.webp .feedback__form::before{ background-image: url(../images/feedback/leaf.webp); }
