--- a/css/style.css
+++ b/css/style.css
@@ -1144,7 +1144,7 @@ body.lock {
   border-color: #90c809;
 }
 
-.input-form:focus + .input-placeholder {
+.input-form._focus + .input-placeholder {
   -webkit-transform: translateY(-1.375rem);
       -ms-transform: translateY(-1.375rem);
           transform: translateY(-1.375rem);
@@ -1202,6 +1202,47 @@ body.lock {
 
 .swiper .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
   background-color: #90c809;
+}
+
+.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  z-index: 10000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.loader__title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  font-size: 2.375rem;
+  z-index: 6;
+  color: #90c809;
+}
+
+.loader__title span {
+  color: #020202;
+}
+
+.loader__item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  z-index: 7;
+  background-color: #90c809;
+}
+
+.loader__item:not(:last-child) {
+  border-radius: 0.0625rem solid #e1fba2;
 }
 
 .custom-dropdown {
@@ -1455,7 +1496,7 @@ body.lock {
 }
 
 .header__burger._active {
-  z-index: 120 !important;
+  z-index: 120;
 }
 
 .header__burger._active span {
@@ -1627,6 +1668,10 @@ body.lock {
           filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.3));
 }
 
+.promo__grandma-bg img {
+  position: relative;
+}
+
 .promo__title {
   max-width: 700px;
   margin-bottom: 3px;
@@ -1738,16 +1783,17 @@ body.lock {
   margin-bottom: 2.5rem;
 }
 
+.promotions__slider {
+  overflow: visible;
+  max-width: 48.75rem;
+}
+
 .promotions__wrapper {
   padding-bottom: 3.125rem;
 }
 
 .promotions__slide {
-  width: auto;
   opacity: 0.3;
-  -webkit-transition: all 280ms ease-in-out 0ms;
-  -o-transition: all 280ms ease-in-out 0ms;
-  transition: all 280ms ease-in-out 0ms;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -1767,8 +1813,7 @@ body.lock {
       -ms-flex-direction: column;
           flex-direction: column;
   position: relative;
-  width: 48.75rem;
-  margin: 0 auto;
+  max-width: 48.75rem;
   overflow: hidden;
   border-radius: 1rem;
   -webkit-box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
@@ -2471,6 +2516,97 @@ body.lock {
   background-color: #90c809;
 }
 
+.no-webp .equipments{
+  background-image: url("../images/additional/bg-grass.jpg"); }
+
+.equipments {
+  padding: 3.75rem 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.equipments__title {
+  max-width: 47.5rem;
+  margin: 0 auto;
+  color: #fff;
+  margin-bottom: 2.5rem;
+}
+
+.equipments__grid {
+  display: -ms-grid;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(18.75rem, 1fr));
+  row-gap: 1.875rem;
+  -webkit-column-gap: 1.25rem;
+     -moz-column-gap: 1.25rem;
+          column-gap: 1.25rem;
+  margin-bottom: 7.5rem;
+}
+
+.equipments__item {
+  background-color: #fff;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border-radius: 10px;
+  -webkit-transition: all 280ms ease-in-out 0ms;
+  -o-transition: all 280ms ease-in-out 0ms;
+  transition: all 280ms ease-in-out 0ms;
+}
+
+.equipments__item:hover {
+  -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1), 0 0 10px 0 rgba(0, 0, 0, 0.1), 0 0 15px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1), 0 0 10px 0 rgba(0, 0, 0, 0.1), 0 0 15px 0 rgba(0, 0, 0, 0.1);
+}
+
+.equipments__image-ibg {
+  padding-bottom: 37.9746835443%;
+}
+
+.equipments__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  row-gap: 0.75rem;
+  padding: 1.5rem 0.75rem 0.75rem;
+}
+
+.equipments__content-title {
+  font-size: 1.125rem;
+  font-weight: 900;
+  color: #555;
+  text-align: center;
+  text-transform: uppercase;
+  line-height: 133.3333333333%;
+}
+
+.equipments__content-desc {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  text-align: center;
+}
+
+.equipments__form {
+  background-color: #fff;
+  border-radius: 10px;
+}
+
 .feedback {
   position: relative;
   padding-top: 3.75rem;
@@ -2908,6 +3044,10 @@ body.lock {
     display: none;
   }
 
+  .item-promotion {
+    width: 100%;
+  }
+
   .item-promotion__footer {
     -ms-grid-columns: 1fr 9.25rem 6.25rem;
     grid-template-columns: 1fr 9.25rem 6.25rem;
@@ -2963,12 +3103,6 @@ body.lock {
     -webkit-transform: translateX(0%);
         -ms-transform: translateX(0%);
             transform: translateX(0%);
-  }
-}
-
-@media (max-width: 768.98px) and (max-width: 20em) {
-  .item-promotion {
-    width: 18.75rem;
   }
 }
 
@@ -3219,6 +3353,11 @@ body.lock {
     text-align: center;
   }
 
+  .equipments__grid {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+
   .policy {
     padding-left: 5px;
     padding-right: 5px;
@@ -3401,26 +3540,6 @@ body.lock {
 }
 }
 
-@media (max-width: 768.98px) and (min-width: 48em) {
-  .item-promotion {
-    width: 37.5rem;
-  }
-}
-
-@media (max-width: 768.98px) and (min-width: 20em) and (max-width: 48em) {
-@supports (width: clamp( 18.75rem , 5.3571428571rem  +  66.9642857143vw , 37.5rem )) {
-    .item-promotion {
-      width: clamp( 18.75rem , 5.3571428571rem  +  66.9642857143vw , 37.5rem );
-    }
-}
-
-@supports not (width: clamp( 18.75rem , 5.3571428571rem  +  66.9642857143vw , 37.5rem )) {
-    .item-promotion {
-      width: calc(18.75rem + 18.75 * (100vw - 20rem) / 28);
-    }
-}
-}
-
 .webp .map-container{ background-image: url(../images/map-preload.webp); }
 
 .webp .promo{ background-image: url(./../images/promo/bg.webp); }
@@ -3432,5 +3551,7 @@ body.lock {
 .webp .individual-selection__form-wrap::before{ background-image: url(../images/selection/herb.webp); }
 
 .webp .reviews{ background-image: url(../images/reviews/bg.webp); }
+
+.webp .equipments{ background-image: url(../images/additional/bg-grass.webp); }
 
 .webp .feedback__form::before{ background-image: url(../images/feedback/leaf.webp); }
